# alpha

./: CMakeLists.txt  README.md
include/alpha/: feedforward.h  numeric.h
source/: feedforward.c  numeric.c
